# situation-report

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  SituationReport.bat  SituationReport.command  SituationReport.md  SituationReport_Struktur.txt  build_gui.spec  build_reports_gui.pyw  generate_feature_overview_pptx.py  generate_launcher_manual.py  generate_manual.py  generate_process_pptx.py  generate_transform_data_manual.py  helper_gui.pyw  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  situation_report_features.pptx  situation_report_prozess.pptx  testdata_generator_gui.pyw  transform_data_gui.pyw  version.py
.github/: release-install.md
.github/workflows/: coverage.yml  dev-build.yml  docs.yml  release.yml
architecture/: index.html
build_reports/: __main__.py  cli.py  export.py  filters.py  gui.py  loader.py  pi_config.py  pi_config_example.json  repel.py  stage_groups.py  terminology.py
development/: index.html
docs/: architecture.en.md  architecture.md  development.en.md  development.md  generate_feature_overview_pptx.py  generate_launcher_manual.py  generate_manual.py  generate_process_pptx.py  generate_testdata_generator_manual.py  generate_transform_data_manual.py  index.en.md  index.md  presentation_management.pptx  presentation_rte_scrummaster.pptx  releases.en.md  releases.md  situation_report_features.pptx  situation_report_prozess.pptx
en/: index.html
helper/: __main__.py  cli.py  gui.py  merger.py
launcher/: __main__.py  gui.py
modules/: build_reports.en.md  build_reports.md  helper.en.md  helper.md  index.en.md  index.html  index.md  launcher.en.md  launcher.md  testdata_generator.en.md  testdata_generator.md
releases/: index.html
scripts/: setup_hooks.py  update_pptx_v090.py  update_readme_version.py
search/: search_index.json
testdata_generator/: __main__.py  cli.py  generator.py  gui.py  workflow_ART_A.txt  workflow_parser.py
tests/: conftest.py
transform_data/: ART_A_CFD.csv  ART_A_CFD.xlsx  ART_A_IssueTimes.csv  ART_A_IssueTimes.xlsx  ART_A_Transitions.csv  ART_A_Transitions.xlsx  __main__.py  gui.py  processor.py  transform.py  workflow.py  workflow_ART_A - original.txt  writers.py
(+81 files in other folders)
