[project]
name = "situation-report"
version = "0.1.0"
description = "Jira issue data toolsuite for metrics and reports"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
dependencies = ["openpyxl>=3.1"]

[project.optional-dependencies]
docs = ["mkdocs-material>=9.5", "mkdocs-static-i18n>=1.3", "babel>=2.14"]

[tool.setuptools.packages.find]
include = ["get_data*", "transform_data*", "build_reports*", "testdata_generator*", "simulate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
